tests/fixtures/diagnostics/type-checker/negative/type-level-union-narrowed-arm-mismatch/input.tysh
namespace Samples.TypeLevelUnionNarrowedArmMismatch

type PrimitiveId = string | int

fun normalize(id: PrimitiveId): string =
  match id {
    text: string => {
      let invalid: int = text
      "bad"
    }
    number: int => "number"
  }
